--- a/solar-system/service.yml
+++ b/solar-system/service.yml
@@ -1,16 +1,21 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: solar-system
+---
+apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: solar-system
   name: solar-system-service
   namespace: solar-system
+  labels:
+    app: solar-system
 spec:
-  ports:
-  - port: 80 #change to 80
-    protocol: TCP
-    targetPort: 80 #change to 80
-    nodePort: 30333
+  type: NodePort
   selector:
     app: solar-system
-  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30333
+      protocol: TCP
