--- a/solar-system/deployment.yml
+++ b/solar-system/deployment.yml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: solar-system
-          image: siddharth67/solar-system:V3
+          image: siddharth67/solar-system:v3
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+#kubectl port-forward svc/solar-system-service -n solar-system 8080:80
