--- a/declarative/app-of-apps/heliocentric-no-pluto-app.yml
+++ b/declarative/app-of-apps/heliocentric-no-pluto-app.yml
@@ -10,7 +10,7 @@ spec:
 
   source:
     repoURL: https://github.com/snreddyboggu/Argocd-Demo.git
-    targetRevision: HEAD
+    targetRevision: master
     path: ./declarative/manifests/heliocentric-model-no-pluto
    
   destination:
