--- a/declarative/multi-app/app-of-apps.yml
+++ b/declarative/multi-app/app-of-apps.yml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/snreddyboggu/Argocd-Demo.git
-    targetRevision: HEAD
+    targetRevision: master
     path: ./declarative/app-of-apps
   destination:
     server: https://kubernetes.default.svc
